# esbn-to-mqtt

./: .env.example  .gitignore  README.md  pyproject.toml  repository.yaml
.github/workflows/: ci.yml  release.yml
docs/: development.md
docs/superpowers/plans/: 2026-05-13-esbn-to-mqtt.md
docs/superpowers/specs/: 2026-05-13-esbn-to-mqtt-design.md
esbn-to-mqtt/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  requirements.txt  run.sh
esbn-to-mqtt/app/esbn_to_mqtt/: captcha.py  config.py  esbn.py  hdf.py  logging.py  main.py  metrics.py  models.py  mqtt.py  state.py  tariff.py
esbn-to-mqtt/tests/unit/: test_mqtt.py
tests/: test_app_metadata.py
tests/fixtures/: esbn_30_min_kwh_anonymized.csv
tests/integration/: test_pipeline.py
tests/unit/: test_captcha.py  test_config.py  test_esbn.py  test_hdf.py  test_logging.py  test_main.py  test_metrics.py  test_models.py  test_mqtt.py  test_state.py  test_tariff.py
