[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "esbn-to-mqtt"
version = "0.1.0"
description = "Home Assistant app worker that publishes ESB Networks smart meter data to MQTT"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "paho-mqtt>=2.1,<3",
  "python-dateutil>=2.9,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<6",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "types-PyYAML>=6.0,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["esbn-to-mqtt/app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
mypy_path = "esbn-to-mqtt/app"
strict = true
